apps/base/media/reiverr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: reiverr
spec:
  serviceName: reiverr
  replicas: 1
  selector:
    matchLabels:
      app: reiverr
  template:
    metadata:
      labels:
        app: reiverr
    spec:
      containers:
        - name: reiverr
          image: artifactory.local.hejsan.xyz/docker/aleksilassila/reiverr:v2.2.0@sha256:778019d17924ee4690dc255099f0b54e7bf9207d447bac027bc2ce526c507262
          ports:
            - containerPort: 9494
              name: http
          volumeMounts:
            - name: reiverr-config-pvc
              mountPath: /config
            - name: reiverr-plugins-pvc
              mountPath: /plugins

  volumeClaimTemplates:
    - metadata:
        name: reiverr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: reiverr-plugins-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 10Gi
