apps/base/media/reiverr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reiverr
spec:
  selector:
    app: reiverr
  ports:
    - name: http
      targetPort: 9494
      port: 9494
